<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="app_name">福大选课助手</string>
    <string name="y_kaikejihuashu">开课计划</string>
    <string name="y_yonghuguanli">用户管理</string>
    <string name="y_gerenshezhi">个人设置</string>
    <string name="y_xuankeguanli">选课管理</string>
    <string name="y_gengxinjihuashu">更新计划书</string>
    <string name="y_update_qd">确定</string>
    <string name="y_update_back">返回</string>
    <string name="y_resourse">路径</string>
    <string name="y_scanf_rightway">请输入正确路径</string>
    <string name="y_xuanke_enddata">选课截止日期</string>
    <string name="y_shenhe_enddata">审核截止日期</string>
    <string name="y_uct_name">教师姓名</string>
    <string name="y_uct_p">联系方式</string>
    <string name="y_chaxun">查询</string>
    <string name="personal_message">个人信息</string>
    <string name="y_zhuanye">专业</string>
    <string name="y_yonghuming">用户名</string>
    <string name="y_kechengming">课程名</string>
    <string name="y_unchooseteacher">未选课教师</string>
    <string name="y_unchooset_list">未选课教师列表</string>
    <string name="name">姓名</string>
    <string name="change">修改</string>
    <string name="new_password">修改密码</string>
    <string name="old_password">初始密码</string>
    <string name="y_daochukebiao">导出课表</string>
    <string name="change_queren">确认修改</string>
    <string name="back">返回</string>
    <string name="y_grgl_personal_message">个人信息</string>
    <string name="y_grgl_name">姓名</string>
    <string name="y_grgl_old_password">初始密码</string>
    <string name="y_grgl_change">修改</string>
    <string name="y_grgl_new_password">新密码</string>
    <string name="y_grgl_change_queren">确认修改</string>
    <string name="y_grgl_chaxun">查询</string>
    <string name="y_grgl_back">返回</string>
    <string name="y_grgl_xiugai">修改个人信息</string>
    <string name="y_tijiaoshenhe">提交审核</string>
    <string name="y_xkgl_xuankegl">选课管理</string>
    <string name="y_xkgl_zhuanye">专业</string>
    <string name="y_xkgl_coursename">课程名</string>
    <string name="y_xkgl_unchooset">未选课教师</string>
    <string name="y_xkgl_back">返回</string>
    <string name="y_yhgl_adduser">添加用户</string>
    <string name="y_yhgl_deluser">删除用户</string>
    <string name="y_yhgl_querendel">确认删除</string>
    <string name="y_yhgl_querenchange">确认修改</string>
    <string name="y_yhgl_changeuser">修改用户</string>
    <string name="y_yhgl_yhm">用户名</string>
    <string name="y_yhgl_name">姓名</string>
    <string name="y_yhgl_chushimima">初始密码</string>
    <string name="y_yhgl_mima">密码</string>
    <string name="y_yhgl_power">权限</string>
    <string name="y_yhgl_phone">手机号</string>
    <string name="y_yhgl_email">邮箱</string>
    <string name="y_yhgl_add">确认添加</string>
    <string name="y_yhgl_back">返回</string>
    <string name="y_yhgl_yhmescheck">用户信息核对</string>
    <string name="y_yhgl_queren">确认</string>
    <string name="y_yhgl_quxiao">取消</string>
    <string name="y_yhgl_xiugai">修改用户信息</string>
    <string name="shouye_denglu">用户登录</string>
    <string name="shouye_yonghuming">用户名</string>
    <string name="shouye_rem_mima">记住密码</string>
    <string name="shouye_find_mima">找回密码</string>
    <string name="shouye_mima">密码</string>
    <string name="title_activity_tmyclass">Tmyclass</string>
    <string name="title_activity_taddclass">Taddclass</string>
    <string name="title_activity_tmain">Tmain</string>
    <string name="title_activity_tidentity">Tidentity</string>
    <string name="title_activity_treset">Treset</string>
    <string name="title_activity_yidentity">Yidentity</string>
    <string name="title_activity_yunteacher">Yunteacher</string>
    <string name="title_activity_ymain">Ymain</string>
    <string name="title_activity_yupdateplan">Yupdataplan</string>
    <string name="title_activity_yreset">Yreset</string>
    <string name="title_activity_ymanageruser">Ymanageruser</string>
    <string name="title_activity_yadduser">Yadduser</string>
    <string name="title_activity_yadduser_1">Yadduser</string>
    <string name="title_activity_yresetuser">Yresetuser</string>
    <string name="title_activity_yresetuser_1">Yresetuser_1</string>
    <string name="title_activity_ydeluser">Ydeluser</string>
    <string name="title_activity_ydeluser_1">Ydeluser_1</string>
    <string name="title_activity_ymanager">Ymanager</string>
    <string name="title_activity_ymanagerclass">Ymanagerclass</string>
    <string name="title_activity_ycheck">Ycheck</string>
    <string name="title_activity_youtput">Youtput</string>
    <string name="title_activity_mmain">Mmain</string>
    <string name="title_activity_mmanager">Mmanager</string>
    <string name="title_activity_midentity">Midentity</string>
    <string name="title_activity_mreset">Mreset</string>
    <string name="total_name">姓名</string>
    <string name="user_name">用户名</string>
    <string name="password">新密码</string>
    <string name="phone">手机号码</string>
    <string name="email">邮箱</string>
    <string name="resource_y">所属学院</string>
    <string name="age">年龄</string>
    <string name="sex">性别</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="course_state">选课状态</string>
    <string name="unchoose">未选</string>
    <string name="total_zhigonghao">职工号</string>
    <string name="total_password">初始密码</string>
    <string name="total_phone">手机号码</string>
    <string name="total_power">用户权限</string>
    <string name="total_choose">选择</string>
    <string name="title_activity_taddclass_1">Taddclass_1</string>
    <string name="title_activity_yupdataplan">Yupdataplan</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_mmanagerclass_1">Mmanagerclass_1</string>
    <string name="title_activity_mmanagerclass_2">Mmanagerclass_2</string>
    <string name="title_activity_teacherxinxi">Teacherxinxi</string>
    <string name="title_activity_kechengxinxi">Kechengxinxi</string>
    <string name="title_activity_kechengliebiao">Kechengliebiao</string>

</resources>
