<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="horizontal" >
    
     <LinearLayout
        android:id="@+id/id_y_tab_kaikejihuashu"
        android:layout_width="0dp"
        android:layout_gravity="center_vertical"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/id_y_tab_kaikejihuashu_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:src="@drawable/chakan" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/y_kaikejihuashu"
            android:textSize="12sp"
            android:textColor="#ff000000" />
    </LinearLayout>
    
     <LinearLayout
        android:id="@+id/id_y_tab_xuankeguanli"
        android:layout_width="0dp"
        android:layout_gravity="center_vertical"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/id_y_tab_xuankeguanli_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:src="@drawable/xuanke" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/y_xuankeguanli"
            android:textSize="12sp"
            android:textColor="#ff000000" />
    </LinearLayout>
     <LinearLayout
        android:id="@+id/id_y_tab_gerenshezhi"
        android:layout_width="0dp"
        android:layout_gravity="center_vertical"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/id_y_tab_gerenshezhi_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:src="@drawable/gerenshezhi" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/y_gerenshezhi"
            android:textSize="12sp"
            android:textColor="#ff000000" />
    </LinearLayout>


</LinearLayout>