<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.text.Yadduser" >

    <LinearLayout
        android:id="@+id/yadduser_title"
         android:layout_width="match_parent"
          android:layout_height="45dp"
          android:layout_alignParentLeft="true"
          android:layout_alignParentTop="true"
          android:background="@android:color/white"
          android:gravity="center_vertical"
          android:orientation="horizontal" >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:text="@string/y_yhgl_adduser"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/yadduser_edit_layout"
        android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/yadduser_title"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_layout_editor_bg"
            android:orientation="vertical" >
       
           <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/y_yhgl_yhm"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />
                
                 <EditText
                    android:id="@+id/y_yhgl_adduser_yhm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:background="#fffbfbfb"
                    android:hint="职工号"/>

   
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ffc8c8c8" />
               
              <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/y_yhgl_name"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />
                
                 <EditText
                    android:id="@+id/y_yhgl_adduser_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:background="#fffbfbfb"
                    android:password="true" />

   
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ffc8c8c8" />
             
           <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/y_yhgl_chushimima"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />
                
                 <EditText
                    android:id="@+id/yadduser_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:background="#fffbfbfb"
                    android:password="false" />
             
  
                </LinearLayout>
            
              <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ffc8c8c8" />
            
              
             
             <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/y_yhgl_power"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />
                  
                  <Spinner
                    android:id="@+id/yadduser_power"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:background="#fffbfbfb"
                    android:singleLine="true" />
  
                </LinearLayout>
                
               <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ffc8c8c8" />
             
           <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/y_yhgl_phone"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />
                
                 <EditText
                    android:id="@+id/yadduser_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:background="#fffbfbfb"
                    android:password="false" />
             
  
                </LinearLayout>
            
    </LinearLayout>
    
     <LinearLayout
            android:id="@+id/y_yhgl_adduser_button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/login_layout_editor_bg"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/id_tab_add"
                android:layout_width="0dp"
          android:layout_height="fill_parent"
          android:layout_gravity="center_vertical"
          android:layout_weight="1"
          android:gravity="center"
          android:orientation="vertical" >
                 
                <ImageButton
                    android:id="@+id/y_yhgl_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#ff000000"
                    android:src="@drawable/adduser" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/y_yhgl_add"
                    android:textColor="#ff000000"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/id_y_yhgl_back"
                 android:layout_width="0dp"
          android:layout_height="fill_parent"
          android:layout_gravity="center_vertical"
          android:layout_weight="1"
          android:gravity="center"
          android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/y_yhgl_add_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:src="@drawable/back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/y_yhgl_back"
                    android:textColor="#ff000000"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

</RelativeLayout>