<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.text.Ydeluser_1" >

  <LinearLayout
        android:id="@+id/ydeluser_1_title"
        android:layout_width="match_parent"
          android:layout_height="45dp"
          android:layout_alignParentLeft="true"
          android:layout_alignParentTop="true"
          android:background="@android:color/white"
          android:gravity="center_vertical"
          android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:text="@string/y_yhgl_yhmescheck"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ydeluser_1_edit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ydeluser_1_title"
        android:background="@drawable/login_layout_editor_bg"
        android:orientation="vertical" >

      <ListView
          android:id="@+id/ydeluser_xinxi"
          android:layout_width="wrap_content"
          android:layout_height="match_parent" >
      </ListView>
       
</LinearLayout>


  <LinearLayout
            android:id="@+id/y_yhgl_del_button_1"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/login_layout_editor_bg"
            android:orientation="horizontal" >

        <LinearLayout
          android:layout_width="0dp"
          android:layout_height="fill_parent"
          android:layout_gravity="center_vertical"
          android:layout_weight="1"
          android:gravity="center"
          android:orientation="vertical" >
                 
                <ImageButton
                    android:id="@+id/y_yhgl_del_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#ff000000"
                    android:src="@drawable/back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/y_yhgl_querendel"
                    android:textColor="#ff000000"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/y_yhgl_del_back_1"
                    
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#ff000000"
                    android:src="@drawable/back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/y_yhgl_quxiao"
                    android:textColor="#ff000000"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

</RelativeLayout>